--- a/styles/global.css
+++ b/styles/global.css
@@ -19,9 +19,17 @@ a {
 
 a:hover {
   text-decoration: underline;
+  
 }
 
 img {
   max-width: 100%;
   display: block;
 }
+
+ul {
+  list-style-type:none;
+  display:flex;
+  justify-content: space-between;
+}
+
