--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,9 +1,9 @@
 .heading2Xl {
-    font-size: 2.5rem;
-    line-height: 1.2;
-    font-weight: 800;
+    font-size: 1.5em;
+    /* line-height: 1.2; */
+    /* font-weight: 800; */
     letter-spacing: -0.05rem;
-    margin: 1rem 0;
+    /* margin: 1rem 0; */
   }
   
   .headingXl {
@@ -23,10 +23,12 @@
   .headingMd {
     font-size: 1.2rem;
     line-height: 1.5;
+    
   }
   
   .borderCircle {
     border-radius: 9999px;
+    margin-left: 10rem;
   }
   
   .colorInherit {
