--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -4,13 +4,13 @@
     margin: 3rem auto 6rem;
   }
   
-  .header {
+  /* .header {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin:5%;
     
-  }
+  } */
   
   .backToHome {
     margin: 3rem 0 0;
@@ -20,6 +20,8 @@
     display:flex;
     justify-content:space-around;
     align-items: center;
+    margin-bottom:5em;
+  
 }
 .name {
   display:flex;
