--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,9 +1,7 @@
 .heading2Xl {
-    font-size: 1.5em;
-    /* line-height: 1.2; */
-    /* font-weight: 800; */
-    letter-spacing: -0.05rem;
-    /* margin: 1rem 0; */
+   font-size: 1.5em;
+   padding-top:10px;
+   letter-spacing: -0.05rem;
   }
   
   .headingXl {
@@ -22,8 +20,9 @@
   
   .headingMd {
     font-size: 1.2rem;
-    line-height: 1.5;
-    
+    /* line-height: 1.5; */
+    max-width: 70rem;
+    margin-left:3em;
   }
   
   .borderCircle {
