--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -45,3 +45,22 @@
   margin-top:20px;
 }
 
+.footer {
+  max-width: 70rem;
+  margin-left: 3.5em;
+  margin-top: 5rem;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+.footer h3 {
+  margin-top: 2em;
+}
+.iconContainer{
+  display:flex;
+}
+
+.iconContainer  a {
+  margin-left: 2em;
+  margin-right: 2em;
+}
